Adding new navbar to home page; altered styles on second page

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
         <div class="flex-item-1">Fun questionnaire</div>
       </nav>
 
-      <h1>The wonderful world of Farscape</h1>
+      <h1>Enter the world of Farscape: <br> a sci-fi TV show</h1>
+      <p id="subtitle">Crazy aliens and ludicrous space adventures<p>
 
       <p id="intro">Farscape is a science fiction television show that chronicles the adventures of Commander John Crichton, an astronaut who finds himself flung into the furthest reaches of the galaxy and embarks on an incredible journey involving many different alien species, a living ship, ruthless villains and much more.
-
-        I have
+        <br><br>
+        During his many adventures and travels through space, John makes lots of new alien friends (as well as making many enemies). Below you will find a few brief profiles of the main characters depicted in this TV show. Simply hover over each character to read more about them.
       </p>
 
       <h2>Character descriptions</h2>
