added hover comments to home page, along with various new styles

--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="body-margin">
-      <h1 id="page2-h1">Glossary of alien terms from Farscape</h1>
+      <h1 id="page2-h1">Glossary of alien terms from Farscape, the TV series</h1>
 
       <p id="page2-intro">
         The world of Farscape is a strange but wonderful place where you are
