Adding third webpage with styles and script

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           </a>
         </div>
         <div class="flex-item-1">
-          <a href="page2.html">The language of Farscape</a>
+          <a href="words-flexbox.html">The language of Farscape</a>
         </div>
-        <div class="flex-item-1">Fun questionnaire</div>
+        <div class="flex-item-1"> <a href="questionnaire.html">Fun questionnaire</a> </div>
       </nav>
 
       <h1>Enter the world of Farscape: <br> a sci-fi TV show</h1>
