--- a/words-flexbox.html
+++ b/words-flexbox.html
@@ -51,7 +51,7 @@
         <button id="button28"><span>"DRD"</span></button>
       </div>
 
-      <a id="back-to-home" href="./index.html">Back to home</a>
+      <a class="back-to-home" href="./index.html">Back to home</a>
     </div>
   </body>
 </html>
