adding media queries for tablet and smartphone viewports

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </nav>
 
       <h1>Enter the world of Farscape: <br> a sci-fi TV show</h1>
-      <p id="subtitle">Crazy aliens and ludicrous space adventures<p>
+      <p id="subtitle">Crazy aliens, bizarre characters and ludicrous space adventures<p>
 
       <p class="intro">Farscape is a science fiction television show that chronicles the adventures of Commander John Crichton, an astronaut who finds himself flung into the furthest reaches of the galaxy and embarks on an incredible journey involving many different alien species, a living ship, ruthless villains and much more.
         <br><br>
