Updating HTML text content

--- a/questionnaire.html
+++ b/questionnaire.html
@@ -53,7 +53,7 @@
 
   <div class="image-description" id="Aeryn" style="display: none">
     <h2>Aeryn</h2>
-    <p>Aeryn is usually the most serious person in the group. She prioritises work over play and doesn't much care for maintaining friendships or relationships outside of work. This allows her to completely focus on the job.</p>
+    <p>Aeryn is usually the most serious person in the group. She prioritises work over play and doesn't much care for maintaining friendships or relationships outside of work, preferring instead to focus on the job.</p>
     <img id="image2" src="https://1.bp.blogspot.com/-l8ww0vcvyGs/XypZtaAUx8I/AAAAAAAAAy4/s_ypYW-PW_EYAkCHWHmCoesXAMXlYtBGQCLcBGAsYHQ/s1600/aeryn3.png" alt="">
   </div>
 
