Updating href attribute

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </a>
         </div>
         <div class="flex-item-1">
-          <a href="words-flexbox.html">The language of Farscape</a>
+          <a href="farscape-dictionary.html">The language of Farscape</a>
         </div>
         <div class="flex-item-1"> <a href="questionnaire.html">Fun questionnaire</a> </div>
       </nav>
